[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "{{cookiecutter.project_slug}}"
description = "{{cookiecutter.project_short_description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"

[tool.rye]
managed = true
dev-dependencies = []

[tool.setuptools]
packages = ["{{cookiecutter.project_slug}}"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.project_slug}}.__init__.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80
exclude = ["*_test.py", "docs/**", "examples/**"]

[tool.ruff.lint]
select = ["E", "F"]
extend-select = [
  "UP", "D", "I", "PL", "S"
]

[tool.ruff.lint.pydocstyle]
convention= 'google'
